chore: fix the text overflow on DateInput controlbar

--- a/frontend/src/components/QueryBuilder/QueryBuilder.module.scss
+++ b/frontend/src/components/QueryBuilder/QueryBuilder.module.scss
@@ -258,6 +258,9 @@ span:last-child {
 .controlBar {
 	flex-shrink: 0;
 	height: 44px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .menuList {
